pkg/lang/testdata/ub/outputs/invalid/description-not-string.ub
outputs: {
  a: { value: var.x, description: 42 }
  b: { value: var.x, description: $'{{var.x}}' }
}
